infra/k3s/base/apps/redpanda/console-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redpanda-console
  labels:
    app: redpanda-console
spec:
  selector:
    app: redpanda-console
  ports:
    - port: 8180
      targetPort: 8180
