infra/k3s/base/apps/redpanda/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redpanda
  labels:
    app: redpanda
spec:
  selector:
    app: redpanda
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
    - name: admin
      port: 9644
      targetPort: 9644
    - name: pandaproxy
      port: 8082
      targetPort: 8082
