infra/k3s/base/apps/redpanda/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redpanda-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`redpanda.localhost`)
      kind: Rule
      services:
        - name: redpanda
          port: 8082
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redpanda-console-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`redpanda-console.localhost`)
      kind: Rule
      services:
        - name: redpanda-console
          port: 8180
